--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.8.11",
     "i18next-browser-languagedetector": "^8.2.1",
